# ms-tool

./: README.md  pyproject.toml  setup.py
example/: test.py
ms_tool/: __init__.py  expasy_rules.py
