[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-toolkit"
version = "0.0.1"
authors = [
  { name="Yu (Tom) Gao", email="yugao@uic.edu" },
]
description = "ms-toolkit -  tools for mass spectrometry data processing"
readme = "README.md"
keywords = ["mass spectrometry", "proteomics", "mzml", "metabolomics"]
dependencies = [
  "numpy",
  "lxml",
  "pyarrow",
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Gaolaboratory/ms-tool"
Issues = "https://github.com/Gaolaboratory/ms-tool/issues"